--- a/analytics/sensors_simple.ipynb
+++ b/analytics/sensors_simple.ipynb
@@ -24,25 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded 38 rows\n"
+      "loaded 830 rows\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "288fa296f41f4ce183a9c27df5a14937",
+       "model_id": "1ace42704e684b66901068243c35b6fd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SensorsUi(children=(Map(center=[49.44, 11.06], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoo…"
+       "SensorsUi(children=(Map(center=[49.0, 12.1], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_…"
       ]
      },
      "metadata": {},
@@ -51,16 +51,15 @@
    ],
    "source": [
     "%autoreload 2\n",
-    "#START_TIME =  \"2022-09-14T00:00:00+02:00\"\n",
-    "#TIME_RANGE = datetime.timedelta(hours=10)\n",
+    "#START_TIME = \"2023-03-15T16:10:00+01:00\"\n",
     "#start =datetime.datetime.fromisoformat(START_TIME)\n",
-    "\n",
-    "TIME_RANGE = datetime.timedelta(minutes=60)\n",
+    "TIME_RANGE = datetime.timedelta(minutes=3600)\n",
     "start = datetime.datetime.now().replace(tzinfo=tz.tzlocal()) - TIME_RANGE\n",
     "\n",
     "df = await loader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_SENSORS, start, start + TIME_RANGE)\n",
-    "print(\"loaded %d rows\" % df.shape[0])\n",
-    "ui.SensorsUi(df)\n"
+    "\n",
+    "ui.SensorsUi(df)\n",
+    "\n"
    ]
   },
   {
