--- a/analytics/metricssimple.ipynb
+++ b/analytics/metricssimple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,26 +24,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded 464 rows\n",
-      "Dataset starting 2023-03-14 09:59:37.626993+01:00  nats rx 2023-03-14 09:59:37.694667\n"
+      "loaded 438 rows\n",
+      "Dataset starting 2023-03-19 09:04:30.776788+01:00  nats rx 2023-03-19 09:04:30.853638\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2826026fadc8498c9c319e99208a2323",
+       "model_id": "1974ee8eeb1149fc8b6b223f4587b826",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "MetricsUi(children=(Map(center=[49.44, 11.06], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoo…"
+       "MetricsUi(children=(Map(center=[49.0, 12.1], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_…"
       ]
      },
      "metadata": {},
@@ -51,14 +51,12 @@
     }
    ],
    "source": [
-    "#START_TIME = \"2022-09-14T08:00:00+02:00\"\n",
-    "TIME_RANGE = datetime.timedelta(minutes=120)\n",
+    "#START_TIME = \"2023-03-15T16:10:00+01:00\"\n",
+    "#start =datetime.datetime.fromisoformat(START_TIME)\n",
+    "TIME_RANGE = datetime.timedelta(minutes=20)\n",
     "start = datetime.datetime.now().replace(tzinfo=tz.tzlocal()) - TIME_RANGE\n",
     "\n",
-    "#start =datetime.datetime.fromisoformat(START_TIME)\n",
-    "\n",
     "df = await loader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_METRICS, start, start + TIME_RANGE)\n",
-    "print(\"loaded %d rows\" % df.shape[0])\n",
     "\n",
     "the_ui = ui.MetricsUi(df)\n",
     "display(the_ui)"
