--- a/analytics/save_data.ipynb
+++ b/analytics/save_data.ipynb
@@ -167,20 +167,23 @@
     }
    ],
    "source": [
-    "START_TIME = \"2022-09-14T00:00:00+02:00\"\n",
-    "TIME_RANGE = datetime.timedelta(hours=10)\n",
+    "START_TIME = \"2023-03-14T15:30:00+01:00\"\n",
+    "END_TIME = \"2023-03-14T15:30:00+01:00\"\n",
+    "\n",
+    "#TIME_RANGE = datetime.timedelta(hours=10)\n",
     "start =datetime.datetime.fromisoformat(START_TIME)\n",
-    "end = start + TIME_RANGE\n",
+    "end =datetime.datetime.fromisoformat(START_TIME)\n",
+    "#end = start + TIME_RANGE\n",
     "\n",
     "make_filename(\"metrics\", start, end)\n",
-    "sdf = await sloader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_SENSORS, start, start + TIME_RANGE)\n",
+    "sdf = await sloader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_SENSORS, start, end)\n",
     "sfile = make_filename(\"sensors\", start, end)\n",
     "print(\"loaded %d rows\" % sdf.shape[0])\n",
     "sdf.to_pickle(sfile)\n",
     "print(\"saved sensors to %s\" % sfile)\n",
     "\n",
     "make_filename(\"metrics\", start, end)\n",
-    "mdf = await mloader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_METRICS, start, start + TIME_RANGE)\n",
+    "mdf = await mloader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_METRICS, start, end)\n",
     "mfile = make_filename(\"metrics\", start, end)\n",
     "print(\"loaded %d rows\" % mdf.shape[0])\n",
     "mdf.to_pickle(mfile)\n",
@@ -212,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "vscode": {
    "interpreter": {
