--- a/analytics/metricssimple.ipynb
+++ b/analytics/metricssimple.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%gui asyncio\n",
     "\n",
-    "import metrics_ui.loader as loader\n",
+    "import stream.metrics_loader as loader\n",
     "import metrics_ui.simple_ui as ui\n",
     "import datetime\n",
     "import matplotlib\n",
@@ -24,21 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded 438 rows\n",
-      "Dataset starting 2023-03-19 09:04:30.776788+01:00  nats rx 2023-03-19 09:04:30.853638\n"
+      "loaded 14838 rows\n",
+      "Dataset starting 2023-03-19 13:25:06.115830+01:00  nats rx 2023-03-19 13:25:06.177341\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1974ee8eeb1149fc8b6b223f4587b826",
+       "model_id": "5312ff18b7db4f08981ff0869b4c6ad0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,9 +60,9 @@
     }
    ],
    "source": [
-    "#START_TIME = \"2023-03-15T16:10:00+01:00\"\n",
+    "#START_TIME = \"2023-03-16T09:10:00+01:00\"\n",
     "#start =datetime.datetime.fromisoformat(START_TIME)\n",
-    "TIME_RANGE = datetime.timedelta(minutes=20)\n",
+    "TIME_RANGE = datetime.timedelta(minutes=500)\n",
     "start = datetime.datetime.now().replace(tzinfo=tz.tzlocal()) - TIME_RANGE\n",
     "\n",
     "df = await loader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_METRICS, start, start + TIME_RANGE)\n",
