--- a/analytics/sensors_simple.ipynb
+++ b/analytics/sensors_simple.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%gui asyncio\n",
     "\n",
-    "import sensors_ui.loader as loader\n",
+    "import stream.bogie_loader as loader\n",
     "import sensors_ui.simple_ui as ui\n",
     "import datetime\n",
     "import matplotlib\n",
@@ -24,20 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded 830 rows\n"
+      "loaded 48 rows\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ace42704e684b66901068243c35b6fd",
+       "model_id": "f47ce16684d84eedb097fb7fce263334",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +62,7 @@
     "%autoreload 2\n",
     "#START_TIME = \"2023-03-15T16:10:00+01:00\"\n",
     "#start =datetime.datetime.fromisoformat(START_TIME)\n",
-    "TIME_RANGE = datetime.timedelta(minutes=3600)\n",
+    "TIME_RANGE = datetime.timedelta(minutes=48*60)\n",
     "start = datetime.datetime.now().replace(tzinfo=tz.tzlocal()) - TIME_RANGE\n",
     "\n",
     "df = await loader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_SENSORS, start, start + TIME_RANGE)\n",
