update README and python install

--- a/analytics/sensors_simple.ipynb
+++ b/analytics/sensors_simple.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib widget\n",
     "%load_ext autoreload\n",
@@ -33,20 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded 48 rows\n"
+      "loaded 24 rows\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f47ce16684d84eedb097fb7fce263334",
+       "model_id": "03549509133c4c9081791ad9117068e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +53,7 @@
     "%autoreload 2\n",
     "#START_TIME = \"2023-03-15T16:10:00+01:00\"\n",
     "#start =datetime.datetime.fromisoformat(START_TIME)\n",
-    "TIME_RANGE = datetime.timedelta(minutes=48*60)\n",
+    "TIME_RANGE = datetime.timedelta(minutes=60)\n",
     "start = datetime.datetime.now().replace(tzinfo=tz.tzlocal()) - TIME_RANGE\n",
     "\n",
     "df = await loader.nats_stream_fetch( SERVER, NATS_CREDS, STREAM_NAME, EXPORT_SUBJECT_SENSORS, start, start + TIME_RANGE)\n",
